Se creo el archivo jar y el GUI se modifico